[project]
name = "comfyui-mape-helpers"
description = "Multi-monitor image preview, Variable Assigment/Wireless Nodes, Prompt Tweaking, Command Palette, Pinned favourite nodes, Node navigation, Fuzzy search, Node time tracking, Organizing and Error management. For more info visit: [a/https://comfyui.ma.pe/](https://comfyui.ma.pe/)"
version = "0.5.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/mape/ComfyUI-mape-Helpers"

[tool.comfy]
PublisherId = "mape"
DisplayName = "ComfyUI-mape-Helpers"
Icon = ""
